# pywonde

./: .gitignore  .gitlab-ci.yml  .openapi-generator-ignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  git_push.sh  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: ACL.md  ACLIdsInner.md  ACLIdsInnerOneOf.md  ClassLessons.md  ClassStudents.md  ClassSubject.md  ClassSubjectOneOf.md  ClassesApi.md  Contact.md  ContactDetails.md  ContactDetailsEmails.md  DateTimeObject.md  Deletion.md  DeletionsApi.md  EducationDetails.md  Employee.md  EmployeeContactDetails.md  EmployeeEmploymentDetails.md  EmployeesApi.md  EmploymentDetails.md  GetSchool200Response.md  GetSchoolAcl200Response.md  GetSchoolClass200Response.md  GetSchoolLessons200Response.md  GetSchoolLessons200ResponseMeta.md  GetSchoolMeta200Response.md  GetSchoolPermissions200Response.md  GetSubjects200Response.md  Lesson.md  LessonsApi.md  ListSchoolClasses200Response.md  ListSchoolDeletions200Response.md  ListSchoolEmployees200Response.md  ListSchoolLessons200Response.md  ListSchoolLessons200ResponseMeta.md  ListSchoolStudents200Response.md  ListSchoolSubjects200Response.md  ListSchools200Response.md  ListStudents200Response.md  Meta.md  (+34 more)
meta/: README.md  TODO.md  generate-python-nextgen.sh  generate-python.sh  openapi-generator-config.json  webhooks.yaml  wonde.openapi.yaml
test/: test_acl.py  test_acl_ids_inner.py  test_acl_ids_inner_one_of.py  test_class_lessons.py  test_class_students.py  test_class_subject.py  test_class_subject_one_of.py  test_classes_api.py  test_contact.py  test_contact_details.py  test_contact_details_emails.py  test_date_time_object.py  test_deletion.py  (+61 more)
(+83 files in other folders)
